--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@uiw/react-md-editor": "^3.18.1",
+    "ipfs-http-client": "^58.0.0",
     "moralis": "^2.3.1",
     "moralis-v1": "^1.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ipfs-uploader": "^1.2.7",
     "react-moralis": "^1.4.2",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4",
