--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.7.0",
-    "hardhat": "^2.11.1"
+    "hardhat": "^2.11.1",
+    "react-router-dom": "^6.4.1"
   }
 }
