--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.10.5",
+    "@multiavatar/multiavatar": "^1.0.7",
     "@polkadot/api": "^9.3.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -23,6 +24,7 @@
     "react-ipfs-uploader": "^1.2.7",
     "react-moralis": "^1.4.2",
     "react-scripts": "^5.0.1",
+    "react-svg": "^15.1.9",
     "web-vitals": "^2.1.4",
     "web3uikit": "^1.0.4"
   },
